# itemplatelib

./: .clang-format  CMakeLists.txt  GEMINI.md  README.md  build.bat
include/CLI/: cli_helper.hpp
include/itemplatelib/: api_exports.h  icomputerinfo.h  itemplatelib.h
scripts/: build.bat  build_android_arm64.sh  build_linux_x64.sh  build_windows_x64.bat
src/: CMakeLists.txt  icomputerinfo.cpp  iprovider.cpp  itemplatelib.cpp  itemplatelib.h
tests/: CMakeLists.txt  main.cpp
